@@ -10,17 +10,14 @@ module Webrat
   VERSION = '0.4.4'
 
   def self.require_xml
-    gem "nokogiri", ">= 1.0.6"
-
     if on_java?
-      # We need Nokogiri's CSS to XPath support, even if using REXML and Hpricot for parsing and searching
-      require "nokogiri/css"
-      require "hpricot"
-      require "rexml/document"
+      gem "nokogiri", ">= 1.2.4"
     else
-      require "nokogiri"
-      require "webrat/core/xml/nokogiri"
+      gem "nokogiri", ">= 1.0.6"
     end
+    
+    require "nokogiri"
+    require "webrat/core/xml/nokogiri"
   end
 
   def self.on_java?
