@@ -60,7 +60,7 @@ module Webrat
 
     def initialize # :nodoc:
       self.open_error_files = true
-      self.parse_with_nokogiri = !Webrat.on_java?
+      self.parse_with_nokogiri = true
       self.application_environment = :test
       self.application_port = 3001
       self.application_address = 'localhost'
